fix the alignment of the session buttons when near to the search box

--- a/DDDEastAnglia/Content/Site.css
+++ b/DDDEastAnglia/Content/Site.css
@@ -282,5 +282,5 @@ a i {
 
 .form-search {
     margin-top: 15px;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
 }
